[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traits = { path="../traits"}
proc-macro2 = "1.0.49"

syn = { version="1.0.107", features=["derive", "extra-traits"] }
quote = "1.0.23"