[package]
name = "try_as_macros"
version = "0.1.0"
edition = "2021" 
license-file = "../LICENSE.txt"
keywords = ["macro", "utiliy", "derive", "type", "types", "enum"]
exclude=["docs/", "Makefile"]
description = "Macros to ease using enums whose sole purpose is to enumerate a set of types."
homepage = "https://github.com/Nearoo/try_as"
documentation = "https://nearoo.github.io/try_as/try_as_macros/"
repository = "https://github.com/Nearoo/try_as"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
syn = { version="1.0.107", features=["derive", "extra-traits"] }
quote = "1.0.23"

try_as_traits = { path="../traits", version="0.1.0"}